# produtos2

./: .gitignore  README.md  docker-compose.yml  notas.txt  pyproject.toml
alembic/: README  env.py
alembic/versions/: 20eed46c4422_.py  267a52214fb3_.py  5230f0c73cb8_.py  63129e15aaac_initial.py  7de41178411f_add_a_column.py  95642dd3921e_update_colum.py  ad30240a5df7_.py  b396c4493a7a_comentario.py  cfab2571d09a_intial.py  ec5294afb0de_update_colum.py  f1fabb7f4fb5_create_first.py
produtos/: commands.py  create_db.py  main.py  query.py  routes.py  service.py
produtos/alembic/: env.py
produtos/database/: db_session.py  schemas.py
produtos/models/: base_class.py  models.py
produtos/tests/: conftest.py  report.xml  test_root.py  test_sample.py
